[Sonar] Various improvements